[package]
name = "quad"
version = "0.1.0"
authors = ["vacuus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["render", "bevy_winit", "bevy_asset", "x11"]
